<resources>
    <string name="app_name">Chatroom</string>
    <string name="btnLogin_str">Login</string>
    <string name="btnSignUp_str">Sign Up</string>
    <string name="email_hint">Enter Email</string>
    <string name="password_hint">Enter Password</string>
    <string name="hint_fn">Enter First Name</string>
    <string name="hint_ln">Enter Last Name</string>
    <string name="gender_label">Gender</string>
    <string name="hint_city">Enter City</string>
    <string name="text_SignUp">Sign Up</string>
    <string name="txt_back">Back</string>
    <string name="hint_email">Enter Email </string>
    <string name="hint_pass">Enter Password</string>
    <string name="hint_retypePass">Retype Password</string>
    <string name="txtLabel">Meet and Greet</string>

    <string name="btnSubmitStr">Submit</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>


    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="str_labelChatroom">List of Chatrooms</string>
    <string name="str_labelProfile">Profile</string>
    <string name="user_list">List of Users</string>
    <string name="profile">Profile</string>
    <string name="WelcomeUProfile">Welcome to User Profile!</string>
    <string name="userNameHint">Name</string>
    <string name="uNameStr" />
    <string name="lastNameHint">LastName</string>
    <string name="lastNameStr" />
    <string name="genderLabelStr">Gender</string>
    <string name="cityHintStr">City</string>
    <string name="cityStr" />
    <string name="btnUpdateStr">Update</string>
    <string name="btnCancelStr">Cancel</string>
    <string name="btnForgotPasswordStr">Forgot Password? </string>
    <string name="ProfileImageDesc" />
    <string-array name="spinnerValues">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string name="title_activity_show_profile_user">ShowProfileUser</string>
    <string name="uNameLabelSP">First Name:</string>
    <string name="uNameSP" >Text </string>
    <string name="lNameLabelSP">Last Name:</string>
    <string name="lastNameSP" >Text </string>
    <string name="genderLabelSP">Gender:</string>
    <string name="genderSP"  >Text </string>
    <string name="cityLabelSP">City:</string>
    <string name="citySP"  >Text </string>
    <string name="emailLabelSP">Email Id:</string>
    <string name="emailSP"  >Text </string>
    <string name="btnBackSP">Go Back</string>
</resources>
