<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/ivProfilePicture"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginTop="28dp"
        android:contentDescription="@string/ProfileImageDesc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_user" />

    <EditText
        android:id="@+id/etUname"
        android:layout_width="360dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/userNameHint"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:text="@string/uNameStr"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivProfilePicture" />

    <EditText
        android:id="@+id/etLastName"
        android:layout_width="360dp"
        android:layout_height="40dp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:hint="@string/lastNameHint"
        android:inputType="textPersonName"
        android:text="@string/lastNameStr"
        app:layout_constraintStart_toStartOf="@+id/etUname"
        app:layout_constraintTop_toBottomOf="@+id/etUname"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/tvGender"
        android:layout_width="91dp"
        android:layout_height="26dp"
        android:layout_marginTop="4dp"
        android:text="@string/genderLabelStr"
        app:layout_constraintStart_toStartOf="@+id/etLastName"
        app:layout_constraintTop_toBottomOf="@+id/etLastName" />

    <Spinner
        android:id="@+id/spinnerGender"
        android:layout_width="230dp"
        android:layout_height="31dp"
        android:layout_marginTop="4dp"
        android:entries="@array/spinnerValues"
        app:layout_constraintEnd_toEndOf="@+id/etLastName"
        app:layout_constraintTop_toBottomOf="@+id/etLastName" />

    <EditText
        android:id="@+id/etCity"
        android:layout_width="360dp"
        android:layout_height="40dp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:hint="@string/cityHintStr"
        android:inputType="textPersonName"
        android:text="@string/cityStr"
        app:layout_constraintStart_toStartOf="@+id/tvGender"
        app:layout_constraintTop_toBottomOf="@+id/spinnerGender"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/btnCancelStr"
        app:layout_constraintEnd_toEndOf="@+id/etCity"
        app:layout_constraintStart_toEndOf="@+id/btnUpdate"
        app:layout_constraintTop_toBottomOf="@+id/etCity" />

    <Button
        android:id="@+id/btnUpdate"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/btnUpdateStr"
        app:layout_constraintEnd_toStartOf="@+id/btnCancel"
        app:layout_constraintStart_toStartOf="@+id/etCity"
        app:layout_constraintTop_toBottomOf="@+id/etCity" />
</androidx.constraintlayout.widget.ConstraintLayout>